<resources>
    <string name="app_name">UARKRegisterApp</string>
    <string name="title_activity_products_listing">Products</string>
    <string name="title_activity_product_view">ProductViewActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_all_products">Show All Products</string>
    <string name="button_create_product">Create Product</string>
    <string name="button_login_activity">Employee Login</string>
    <string name="button_login">Login</string>
    <string name="text_view_landing_welcome">UARK Register App</string>
    <string name="text_view_products_lookup_code">LookupCode</string>
    <string name="text_view_products_count">0</string>
    <string name="text_view_products_created_on">01/01/1970</string>
    <string name="text_view_label_products_lookup_code">Lookup Code:</string>
    <string name="text_view_label_products_count">Count:</string>
    <string name="text_view_label_products_created_on">Created On:</string>
    <string name="text_view_login_greeter">Welcome! Please log in.</string>
    <string name="text_view_login">Employee ID</string>
    <string name="text_view_password">Password</string>
    <string name="alert_dialog_products_loading">Loading Products</string>
    <string name="alert_dialog_product_save">Saving Product...</string>
    <string name="alert_dialog_product_delete">Deleting Product...</string>
    <string name="alert_dialog_product_save_success">The product was successfully saved.</string>
    <string name="alert_dialog_product_save_failure">An issue was encountered when attempting to save the product. The changes were not saved.</string>
    <string name="alert_dialog_product_delete_success">The product was successfully deleted.</string>
    <string name="alert_dialog_product_delete_failure">An issue was encountered when attempting to delete the product. You can try again to delete the product.</string>
    <string name="alert_dialog_products_load_failure">Unable to load products listing.</string>
    <string name="alert_dialog_cart_load_failure">Unable to load cart contents for kyle.</string>
    <string name="alert_dialog_product_delete_confirm">Are you sure you want to delete this product? This action cannot be undone.</string>
    <string name="alert_dialog_employee_login">Attempting to Login</string>
    <string name="alert_dialog_employee_login_failure">Failed to login.</string>
    <string name="validation_product_lookup_code">Product lookup code may not be empty.</string>
    <string name="validation_product_count">Product count must be a number and may not be negative.</string>
    <string name="intent_extra_product">intent_extra_product</string>
    <string name="product_in_cart">product_in_cart</string>

    <string name="intent_extra_employee">intent_extra_employee</string>
    <string name="main_menu_welcome">Welcome {Name}! What would you like to do next?</string>
    <string name="start_transaction">Start Transaction</string>
    <string name="start_returns">Start Returns</string>
    <string name="create_employee">Create Employee</string>
    <string name="sales_report_product">Sales Report: Product</string>
    <string name="sales_report_cashier">Sales Report: Cashier</string>
    <string name="log_out">Log Out</string>
    <string name="back_button">Back</string>
    <string name="to_checkout">Checkout</string>
    <string name="please_create_your_first_user">Please create your first user</string>
    <string name="employee_welcome">Welcome %1$s! What would you like to do next?</string>
    <string name="title_activity_transaction_">Transaction</string>
    <string name="title_activity_checkout">Checkout</string>
</resources>
